--- a/custom_components/versatile_thermostat/translations/it.json
+++ b/custom_components/versatile_thermostat/translations/it.json
@@ -30,15 +30,15 @@
           "heater_entity3_id": "Terzo riscaldatore",
           "heater_entity4_id": "Quarto riscaldatore",
           "proportional_function": "Algoritmo",
-          "climate_entity_id": "Termostato sottostante",
-          "climate_entity2_id": "Secundo termostato sottostante",
-          "climate_entity3_id": "Terzo termostato sottostante",
-          "climate_entity4_id": "Quarto termostato sottostante",
+          "climate_entity_id": "Primo termostato",
+          "climate_entity2_id": "Secondo termostato",
+          "climate_entity3_id": "Terzo termostato",
+          "climate_entity4_id": "Quarto termostato",
           "ac_mode": "AC mode ?",
-          "valve_entity_id": "Primo valvola numero",
-          "valve_entity2_id": "Secondo valvola numero",
-          "valve_entity3_id": "Terzo valvola numero",
-          "valve_entity4_id": "Quarto valvola numero",
+          "valve_entity_id": "Prima valvola",
+          "valve_entity2_id": "Seconda valvolao",
+          "valve_entity3_id": "Terza valvola",
+          "valve_entity4_id": "Quarta valvola",
           "auto_regulation_mode": "Autoregolamentazione",
           "inverse_switch_command": "Comando inverso"
         },
@@ -48,15 +48,15 @@
           "heater_entity3_id": "Entity id del terzo riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "heater_entity4_id": "Entity id del quarto riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "proportional_function": "Algoritmo da utilizzare (il TPI per adesso è l'unico)",
-          "climate_entity_id": "Entity id del termostato sottostante",
-          "climate_entity2_id": "Entity id del secundo termostato sottostante",
-          "climate_entity3_id": "Entity id del terzo termostato sottostante",
-          "climate_entity4_id": "Entity id del quarto termostato sottostante",
+          "climate_entity_id": "Entity id del primo termostato",
+          "climate_entity2_id": "Entity id del secondo termostato",
+          "climate_entity3_id": "Entity id del terzo termostato",
+          "climate_entity4_id": "Entity id del quarto termostato",
           "ac_mode": "Utilizzare la modalità AC (Air Conditioned) ?",
-          "valve_entity_id": "Entity id del primo valvola numero",
-          "valve_entity2_id": "Entity id del secondo valvola numero",
-          "valve_entity3_id": "Entity id del terzo valvola numero",
-          "valve_entity4_id": "Entity id del quarto valvola numero",
+          "valve_entity_id": "Entity id della prima valvola",
+          "valve_entity2_id": "Entity id della seconda valvola",
+          "valve_entity3_id": "Entity id della terza valvola",
+          "valve_entity4_id": "Entity id della quarta valvola",
           "auto_regulation_mode": "Regolazione automatica della temperatura target",
           "inverse_switch_command": "Inverte il controllo dell'interruttore per un'installazione con filo pilota e diodo"
         }
@@ -188,15 +188,15 @@
           "heater_entity3_id": "Terzo riscaldatore",
           "heater_entity4_id": "Quarto riscaldatore",
           "proportional_function": "Algoritmo",
-          "climate_entity_id": "Termostato sottostante",
-          "climate_entity2_id": "Secundo termostato sottostante",
-          "climate_entity3_id": "Terzo termostato sottostante",
-          "climate_entity4_id": "Quarto termostato sottostante",
+          "climate_entity_id": "Primo termostato",
+          "climate_entity2_id": "Secondo termostato",
+          "climate_entity3_id": "Terzo termostato",
+          "climate_entity4_id": "Quarto termostato",
           "ac_mode": "AC mode ?",
-          "valve_entity_id": "Primo valvola numero",
-          "valve_entity2_id": "Secondo valvola numero",
-          "valve_entity3_id": "Terzo valvola numero",
-          "valve_entity4_id": "Quarto valvola numero",
+          "valve_entity_id": "Prima valvola",
+          "valve_entity2_id": "Seconda valvola",
+          "valve_entity3_id": "Terza valvola",
+          "valve_entity4_id": "Quarta valvola",
           "auto_regulation_mode": "Autoregolamentazione",
           "inverse_switch_command": "Comando inverso"
         },
@@ -206,15 +206,15 @@
           "heater_entity3_id": "Entity id del terzo riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "heater_entity4_id": "Entity id del quarto riscaldatore facoltativo. Lasciare vuoto se non utilizzato",
           "proportional_function": "Algoritmo da utilizzare (il TPI per adesso è l'unico)",
-          "climate_entity_id": "Entity id del termostato sottostante",
-          "climate_entity2_id": "Entity id del secundo termostato sottostante",
-          "climate_entity3_id": "Entity id del terzo termostato sottostante",
-          "climate_entity4_id": "Entity id del quarto termostato sottostante",
+          "climate_entity_id": "Entity id del primo termostato",
+          "climate_entity2_id": "Entity id del secondo termostato",
+          "climate_entity3_id": "Entity id del terzo termostato",
+          "climate_entity4_id": "Entity id del quarto termostato",
           "ac_mode": "Utilizzare la modalità AC (Air Conditioned) ?",
-          "valve_entity_id": "Entity id del primo valvola numero",
-          "valve_entity2_id": "Entity id del secondo valvola numero",
-          "valve_entity3_id": "Entity id del terzo valvola numero",
-          "valve_entity4_id": "Entity id del quarto valvola numero",
+          "valve_entity_id": "Entity id della prima valvola",
+          "valve_entity2_id": "Entity id della seconda valvola",
+          "valve_entity3_id": "Entity id della terza valvola",
+          "valve_entity4_id": "Entity id della quarta valvola",
           "auto_regulation_mode": "Autoregolamentazione",
           "inverse_switch_command": "Inverte il controllo dell'interruttore per un'installazione con filo pilota e diodo"
         }
@@ -252,9 +252,9 @@
         "data_description": {
           "window_sensor_entity_id": "Lasciare vuoto se non deve essere utilizzato alcun sensore finestra",
           "window_delay": "Ritardo in secondi prima che il rilevamento del sensore sia preso in considerazione",
-          "window_auto_open_threshold": "Valore consigliato: tra 0.05 e 0.1. Lasciare vuoto se il rilevamento automatico della finestra aperta non è utilizzato",
-          "window_auto_close_threshold": "Valore consigliato: 0. Lasciare vuoto se il rilevamento automatico della finestra aperta non è utilizzato",
-          "window_auto_max_duration": "Valore consigliato: 60 (un'ora). Lasciare vuoto se il rilevamento automatico della finestra aperta non è utilizzato"
+          "window_auto_open_threshold": "Valore consigliato: tra 0.05 e 0.1 - Lasciare vuoto se il rilevamento automatico della finestra aperta non è utilizzato",
+          "window_auto_close_threshold": "Valore consigliato: 0 - Lasciare vuoto se il rilevamento automatico della finestra aperta non è utilizzato",
+          "window_auto_max_duration": "Valore consigliato: 60 minuti. Lasciare vuoto se il rilevamento automatico della finestra aperta non è utilizzato"
         }
       },
       "motion": {
@@ -320,8 +320,8 @@
     "thermostat_type": {
       "options": {
         "thermostat_over_switch": "Termostato su un interruttore",
-        "thermostat_over_climate": "Termostato sopra un altro termostato",
-        "thermostat_over_valve": "Thermostato su una valvola"
+        "thermostat_over_climate": "Termostato su un climatizzatore",
+        "thermostat_over_valve": "Termostato su una valvola"
       }
     },
     "auto_regulation_mode": {
