Issue #162 - overpowering mode after preset change

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -349,6 +349,7 @@
     },
     "auto_regulation_mode": {
       "options": {
+        "auto_regulation_slow": "Lente",
         "auto_regulation_strong": "Forte",
         "auto_regulation_medium": "Moyenne",
         "auto_regulation_light": "Légère",
