--- a/custom_components/versatile_thermostat/translations/it.json
+++ b/custom_components/versatile_thermostat/translations/it.json
@@ -326,6 +326,7 @@
     },
     "auto_regulation_mode": {
       "options": {
+        "auto_regulation_slow": "Lento",
         "auto_regulation_strong": "Forte",
         "auto_regulation_medium": "Media",
         "auto_regulation_light": "Leggera",
