--- a/custom_components/versatile_thermostat/translations/it.json
+++ b/custom_components/versatile_thermostat/translations/it.json
@@ -330,6 +330,7 @@
         "auto_regulation_strong": "Forte",
         "auto_regulation_medium": "Media",
         "auto_regulation_light": "Leggera",
+        "auto_regulation_expert": "Esperto",
         "auto_regulation_none": "Nessuna autoregolamentazione"
       }
     }
