--- a/custom_components/versatile_thermostat/translations/sk.json
+++ b/custom_components/versatile_thermostat/translations/sk.json
@@ -42,7 +42,8 @@
           "auto_regulation_mode": "Self-regulation",
           "auto_regulation_dtemp": "Regulation threshold",
           "auto_regulation_periode_min": "Regulation minimal period",
-          "inverse_switch_command": "Inverse switch command"
+          "inverse_switch_command": "Inverse switch command",
+          "auto_fan_mode": " Auto fan mode"
         },
         "data_description": {
           "heater_entity_id": "ID entity povinného ohrievača",
@@ -62,7 +63,8 @@
           "auto_regulation_mode": "Auto adjustment of the target temperature",
           "auto_regulation_dtemp": "The threshold in ° under which the temperature change will not be send",
           "auto_regulation_periode_min": "Duration in minutes between two regulation update",
-          "inverse_switch_command": "For switch with pilot wire and diode you may need to inverse the command"
+          "inverse_switch_command": "For switch with pilot wire and diode you may need to inverse the command",
+          "auto_fan_mode": " Automatically activate fan when huge heating/cooling is necessary"
         }
       },
       "tpi": {
@@ -211,7 +213,8 @@
           "auto_regulation_mode": "Self-regulation",
           "auto_regulation_dtemp": "Regulation threshold",
           "auto_regulation_periode_min": "Regulation minimal period",
-          "inverse_switch_command": "Inverse switch command"
+          "inverse_switch_command": "Inverse switch command",
+          "auto_fan_mode": " Auto fan mode"
         },
         "data_description": {
           "heater_entity_id": "ID entity povinného ohrievača",
@@ -231,7 +234,8 @@
           "auto_regulation_mode": "Auto adjustment of the target temperature",
           "auto_regulation_dtemp": "The threshold in ° under which the temperature change will not be send",
           "auto_regulation_periode_min": "Duration in minutes between two regulation update",
-          "inverse_switch_command": "For switch with pilot wire and diode you may need to inverse the command"
+          "inverse_switch_command": "For switch with pilot wire and diode you may need to inverse the command",
+          "auto_fan_mode": " Automatically activate fan when huge heating/cooling is necessary"
         }
       },
       "tpi": {
@@ -354,6 +358,15 @@
         "auto_regulation_light": "Light",
         "auto_regulation_expert": "Expert",
         "auto_regulation_none": "No auto-regulation"
+      }
+    },
+    "auto_fan_mode": {
+      "options": {
+        "auto_fan_none": "No auto-fan",
+        "auto_fan_low": "Low",
+        "auto_fan_medium": "Medium",
+        "auto_fan_high": "High",
+        "auto_fan_turbo": "Turbo"
       }
     }
   },
